--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           <h3>Conteúdo</h3>
           <ul>
             <li class="justify">Matemática Básica - Avançada</li>
-            <li class="justify">Funções</li>
-            <li class="justify">Cálculo 1</li>
-            <li class="justify">Fundamentos de Programação</li>
+            <li class="justify">Matemática Avançada</li>
+            <li class="justify">Conteúdos para vestibular</li>
+            <li class="justify">Fundamentos de Programação - Python</li>
             <li></li>
           </ul>
         </div>
@@ -53,9 +53,9 @@
           <h3>Didática</h3>
           <ul>
             <li class="justify">Aulas presenciais e virtuais</li>
-            <li class="justify">Didática interativa</li>
-            <li class="justify">Listas de exercício</li>
-            <li class="justify">Avaliações</li>
+            <li class="justify">Foco na aprendizagem</li>
+            <li class="justify">Ensino individualizado</li>
+            <li class="justify">Listas de exercícios</li>
           </ul>
         </div>
       </section>
@@ -63,30 +63,29 @@
         <div id="Localização">
           <h2>Localização</h2>
           <ul>
-            <li>São José dos Pinhais <span class="hide">(sem taxa de deslocamento)</span></li>
-            <li>Curitiba e região <span class="hide">(com taxa de deslocamento)</span></li>
+            <li>São José dos Pinhais <span class="hide"></span></li>
+            <li>Curitiba e região <span class="hide"></span></li>
             <li>
               Faço atendimentos virtuais! <span class="hide">
-                (aulas de programação são
-                exclusivamente virtuais)
               </span>
             </li>
           </ul>
         </div>
         <div id="Valores">
           <h2>Valores</h2>
-          <p>
-            <i>R$50,00</i> a hora + taxa de deslocamento caso seja em
-            Curitiba e região metropolitana.
-          </p>
+          <ul>
+            <li><i>R$50,00</i> a hora + taxa de deslocamento</li>
+            <li>Desconto para grupos e pacotes de aulas.</li>
+            <li>Primeira aula gratuita!</li>
+          </ul>
         </div>
       </section>
       <section id="Contato">
         <h2>Contato</h2>
         <ul>
-          <li class="justify"><i class="fa-solid fa-envelope" style="color: #000000;"></i> yanko.12322@gmail.com</li>
-          <li class="justify"><i class="fa-brands fa-whatsapp" style="color: #000000;"></i>  41 9 9934-6648</li>
-          <li class="justify"><i class="fa-brands fa-instagram" style="color: #000000;"></i> yan.szsz</li>
+          <li class="justify"><i class="fa-solid fa-envelope" style="color: #000000;"></i> <a href="mailto: yanko.12322@gmail.com">yanko.12322@gmail.com</a></li>
+          <li class="justify"><i class="fa-brands fa-whatsapp" style="color: #000000;"></i>  <a href="https://wa.me/5541999346648" target="_blank">41 9 9934-6648</a></li>
+          <li class="justify"><i class="fa-brands fa-instagram" style="color: #000000;"></i> <a href="https://www.instagram.com/yan.szsz/" target="_blank">yan.szsz</a></li>
         </ul>
       </section>
     </main>
