--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
       <section id="Contato">
         <h2>Contato</h2>
         <ul>
-          <li class="justify"><i class="fa-solid fa-envelope" style="color: #000000;"></i> <a href="mailto: yanko.12322@gmail.com">yanko.12322@gmail.com</a></li>
-          <li class="justify"><i class="fa-brands fa-whatsapp" style="color: #000000;"></i>  <a href="https://wa.me/5541999346648" target="_blank">41 9 9934-6648</a></li>
-          <li class="justify"><i class="fa-brands fa-instagram" style="color: #000000;"></i> <a href="https://www.instagram.com/yan.szsz/" target="_blank">yan.szsz</a></li>
+          <li class="justify"><i class="fa-solid fa-envelope" style="color: #000000;"></i> <a href="mailto: yanko.12322@gmail.com"><u>yanko.12322@gmail.com</u></a></li>
+          <li class="justify"><i class="fa-brands fa-whatsapp" style="color: #000000;"></i>  <a href="https://wa.me/5541999346648" target="_blank"><u>41 9 9934-6648</u></a></li>
+          <li class="justify"><i class="fa-brands fa-instagram" style="color: #000000;"></i> <a href="https://www.instagram.com/yan.szsz/" target="_blank"><u>yan.szsz</u></a></li>
         </ul>
       </section>
     </main>
