--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <h2>Valores</h2>
           <ul>
             <li><i>R$50,00</i> a hora + taxa de deslocamento</li>
-            <li>Desconto para grupos e pacotes de aulas.</li>
+            <li>Desconto para grupos e pacotes de aulas</li>
             <li>Primeira aula gratuita!</li>
           </ul>
         </div>
