--- a/index.html
+++ b/index.html
@@ -71,13 +71,40 @@
             </li>
           </ul>
         </div>
-        <div id="Valores">
-          <h2>Valores</h2>
-          <ul>
-            <li><i>R$50,00</i> a hora + taxa de deslocamento</li>
-            <li>Desconto para grupos e pacotes de aulas</li>
-            <li>Primeira aula gratuita!</li>
-          </ul>
+        <div id="Pacotes_de_Aula">
+          <h2>Pacotes de Aula</h2>
+          <div id="Pacote_Pitágoras" class="content">
+            <h3>Pacote Pitágoras</h3>
+            <ul>
+              <li class="justify">1 hora/semana - 4 horas/mês</li>
+              <li class="justify"><i>R$260,00</i> por mês</li>
+              <li class="justify"><i>R$70,00</i> de desconto de indicação</li>
+            </ul>
+          </div>
+          <div id="Pacote_Euclides" class="content">
+            <h3>Pacote Euclides</h3>
+            <ul>
+              <li class="justify">1.5 horas/semana - 6 horas/mês</li>
+              <li class="justify"><i>R$360,00</i> por mês</li>
+              <li class="justify"><i>R$80,00</i> de desconto de indicação</li>
+            </ul>
+          </div>
+          <div id="Pacote_Arquimedes" class="content">
+            <h3>Pacote Arquimedes</h3>
+            <ul>
+              <li class="justify">2 horas/semana - 8 horas/mês</li>
+              <li class="justify"><i>R$440,00</i> por mês</li>
+              <li class="justify"><i>R$90,00</i> de desconto de indicação</li>
+            </ul>
+          </div>
+          <div id="Pacote_Einstein" class="content">
+            <h3>Pacote Einstein</h3>
+            <ul>
+              <li class="justify">4 horas/semana - 16 horas/mês</li>
+              <li class="justify"><i>R$800,00</i> por mês</li>
+              <li class="justify"><i>R$100,00</i> de desconto de indicação</li>
+            </ul>
+          </div>
         </div>
       </section>
       <section id="Contato">
