--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <div id="Conteúdo" class="content">
           <h3>Conteúdo</h3>
           <ul>
-            <li class="justify">Matemática Básica - Avançada</li>
-            <li class="justify">Matemática Avançada</li>
-            <li class="justify">Conteúdos para vestibular</li>
+            <li class="justify">Ensino Fundamental</li>
+            <li class="justify">Ensino Médio</li>
+            <li class="justify">Vestibular</li>
             <li class="justify">Fundamentos de Programação - Python</li>
             <li></li>
           </ul>
