--- a/index.html
+++ b/index.html
@@ -107,6 +107,31 @@
           </div>
         </div>
       </section>
+      <section id="faq">
+        <h2>Perguntas Frequentes</h2>
+          <details>
+            <summary>Como funciona o desconto por indicação?</summary>
+            <p>Ao indicar alguém para ter aulas comigo, no primeiro mês que seu colega tiver aulas, você recebe o desconto de indicação.</p>
+          </details>
+          <details>
+            <summary>Caso eu queira repor uma aula, como faz?</summary>
+            <p>Caso você não compareça na aula no horário combinado, não haverá reposição. Entretanto, caso você avise com 24 horas de antecedência que não poderá comparecer, nós remarcaremos a aula para outro dia. O valor não é alterado, independente do caso.</p>
+          </details>
+          <details>
+            <summary>E se eu quiser mudar de pacote durante o mês?</summary>
+            <p>Caso você escolha mudar para um pacote com menos aulas, você terá todas as aulas do mês referente ao pacote anterior e, no próximio mês, as aulas referente ao novo pacote.<p>
+
+            </p>
+              Caso você contrate um pacote com mais aulas, na semana seguinte você terá as aulas referente ao novo pacote e pagará o novo valor apenas no mês seguinte.
+            </p>
+          </details>
+          <details>
+            <summary>E o pagamento?</summary>
+            <p>Após a primeira aula gratuita, caso você queira contratar algum pacote, o pagamento é feito antes das aulas começarem.</p>
+
+            <p>Formas de pagamento: PIX, transferência ou dinheiro.</p>
+          </details>
+      </section>
       <section id="Contato">
         <h2>Contato</h2>
         <ul>
