--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
         <h2>Quem sou eu?</h2>
         <div>
           <p class="justify">
-            Aluno do curso Matemática - Licenciatura ofertado pela Universidade
-            Federal do Paraná. Dou aulas particulares de matemática
-            que abrangem desde o conteúdo mais básico do ensino fundamental até
-            os mais complexos do ensino superior. Também ofereço tutoria em
-            programação com a linguagem Python!
+            Estudante do curso de Licenciatura em Matemática oferecido pela Universidade
+            Federal do Paraná, estou dedicado em oferecer aulas particulares abrangentes, que
+            cobrem toda a matemática desde os anos iniciais do ensino fundamental até o ensino
+            médio. Além disso, ofereço tutoria especializada em programação, com ênfase na linguagem
+            Python. Meu compromisso é oferecer uma experiência educacional enriquecedora, ajudando
+            os alunos a alcançarem seu pleno potencial tanto na matemática quanto na programação.
+            Junte-se a mim nessa jornada de aprendizado e descoberta!
           </p>
           <aside>
             <img src="./Images/Yanko.jpg" alt="Foto do Yanko" />
@@ -119,11 +121,7 @@
           </details>
           <details>
             <summary>E se eu quiser mudar de pacote durante o mês?</summary>
-            <p>Caso você escolha mudar para um pacote com menos aulas, você terá todas as aulas do mês referente ao pacote anterior e, no próximio mês, as aulas referente ao novo pacote.<p>
-
-            </p>
-              Caso você contrate um pacote com mais aulas, na semana seguinte você terá as aulas referente ao novo pacote e pagará o novo valor apenas no mês seguinte.
-            </p>
+            <p>Caso você decida contratar um novo pacote, você terá todas as aulas referentes ao pacote anterior até o fim do mês e, no próximo mês começaremos as atividades referentes ao novo pacote.<p>
           </details>
           <details>
             <summary>E o pagamento?</summary>
