I dont even know

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <span class="icon"><ion-icon name="add-outline"></ion-icon></span>
         </div>
         <div class="resposta">
-          <span>pós a primeira aula gratuita, caso você queira contratar algum pacote, o pagamento é feito antes das aulas começarem.
+          <span>Após a primeira aula gratuita, caso você queira contratar algum pacote, o pagamento é feito antes das aulas começarem.
 
             Formas de pagamento: PIX, transferência ou dinheiro.</span>
         </div>
